--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@lottiefiles/vue-lottie-player": "^1.1.0",
+    "aos": "^3.0.0-beta.6",
     "autoprefixer": "^10",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "element-ui": "^2.15.13",
     "postcss": "^8",
     "tailwindcss": "^3",
     "vue": "^2.6.14",
